--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -1,13 +1,14 @@
 name: Sync Zotero to Readwise
 
 on:
-  workflow_dispatch:        # Enable manual "Run workflow" button
+  workflow_dispatch:        # Enables manual "Run workflow" button
   schedule:
-    - cron: "0 3 * * 1"      # Scheduled run at 03:00 UTC every Monday
+    - cron: "0 3 * * 1"      # Scheduled run every Monday at 03:00 UTC
 
 jobs:
-  zotero-to-readwise-automation:
+  zotero-to-readwise:
     runs-on: ubuntu-latest
+
     steps:
       - name: 🍽️ Checkout the repo
         uses: actions/checkout@v4
@@ -19,11 +20,15 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: 💿 Install Zotero2Readwise Python package
+      - name: 💿 Install Zotero2Readwise
         run: pip install git+https://github.com/e-alizadeh/Zotero2Readwise.git
 
-      - name: 📥 Download the Python script needed for automation
-        run: curl https://raw.githubusercontent.com/e-alizadeh/Zotero2Readwise/master/zotero2readwise/run.py -o run.py
+      - name: 📥 Download the automation script
+        run: curl -sSL https://raw.githubusercontent.com/e-alizadeh/Zotero2Readwise/master/zotero2readwise/run.py -o run.py
 
-      - name: 🚀 Run Automation
-        run: python run.py ${{ secrets.READWISE_TOKEN }} ${{ secrets.ZOTERO_KEY }} ${{ secrets.ZOTERO_ID }}
+      - name: 🚀 Run the Zotero-to-Readwise sync
+        run: |
+          python run.py \
+            "${{ secrets.READWISE_TOKEN }}" \
+            "${{ secrets.ZOTERO_KEY }}" \
+            "${{ secrets.ZOTERO_ID }}"
