--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .
+          pip install requests pyzotero
+          pip install ./zotero2readwise
 
       - name: Run Zotero2Readwise
         env:
